@@ -480,6 +480,11 @@ public class PDFParser extends AbstractParser implements Initializable {
     }
 
     @Field
+    public void setOcrRenderingStrategy(String ocrRenderingStrategy) {
+        defaultConfig.setOcrRenderingStrategy(ocrRenderingStrategy);
+    }
+
+    @Field
     public void setOcrImageType(String imageType) {
         defaultConfig.setOcrImageType(imageType);
     }
